force-app/main/default/objects/Certification__c/Certification__c.object-meta.xml
<CustomObject>
    <description>Object to store staff certifications obtained from training</description>
    <label>Certification</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Certification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>