force-app/main/default/objects/Certification__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Identifies category the certification falls under</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equipment Operation</fullName>
                <label>Equipment Operation (e.g. Forklift)</label>
            </value>
            <value>
                <fullName>Health &amp; Safety</fullName>
                <label>Health &amp; Safety (e.g. First Aid)</label>
            </value>
            <value>
                <fullName>Industry &amp; Standards</fullName>
                <label>Industry &amp; Standards (e.g. ISO, WHMIS)</label>
            </value>
            <value>
                <fullName>Maintenance &amp; Repair</fullName>
                <label>Maintenance &amp; Repair (e.g. Metal Detector Verification)</label>
            </value>
            <value>
                <fullName>Product Knowledge</fullName>
                <label>Product Knowledge (e.g. Pump)</label>
            </value>
            <value>
                <fullName>Systems &amp; Software</fullName>
                <label>Systems &amp; Software (e.g. Salesforce, Excel)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>