force-app/main/default/objects/Certification__c/fields/Certificate_Description__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Description__c</fullName>
    <description>Text field that holds the certificate name or description</description>
    <inlineHelpText>Certificate Name or Description</inlineHelpText>
    <label>Certificate Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>