force-app/main/default/objects/Certification__c/fields/Certification_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Certification_ID_Number__c</fullName>
    <description>Identification number of the certificate</description>
    <inlineHelpText>This should be a unique number to you</inlineHelpText>
    <label>Certification ID Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>