force-app/main/default/objects/Certification__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost/Amount of the Certification/Certificate</description>
    <inlineHelpText>Cost/Amount of the Certification/Certificate</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>