force-app/main/default/objects/Certification__c/fields/Does_Not_Expire__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Expire__c</fullName>
    <description>Certification does not expire if there is no expiration date</description>
    <formula>ISBLANK( Expiration_Date__c )</formula>
    <label>Does Not Expire</label>
    <type>Checkbox</type>
</CustomField>