force-app/main/default/objects/Certification__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date the certificate is effective</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>