force-app/main/default/objects/Certification__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relates contact to certification</description>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Welco Expediting Ltd.</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Welco Manufacturing</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Certifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>