force-app/main/default/objects/Certification__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <defaultValue>TODAY() + 365</defaultValue>
    <description>Date the certificate expires</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>