force-app/main/default/objects/Certification__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relates the certification to a governing body or organization</description>
    <inlineHelpText>Search for the provider. If the provider does not exist, create a new Account.</inlineHelpText>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>